[package]
name = "sodals_mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol (MCP) server and client for SODALS"

[[bin]]
name = "sodals-mcp-server"
path = "src/bin/mcp_server.rs"

[dependencies]
# --- MCP Protocol Core ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# --- Async Runtime ---
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# --- HTTP/SSE Transport ---
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# --- Utilities ---
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dashmap = "5.5"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
async-stream = "0.3"

# --- SODALS Internal ---
sodals_common = { path = "../sodals_common" }
sodals_net = { path = "../sodals_net" }
